liveness probe 체크

--- a/ch01/my-app/Dockerfile
+++ b/ch01/my-app/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk
 
-COPY build/libs/my-app-0.0.1-SNAPSHOT.jar my-app-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java", "-jar"]
-CMD ["my-app-0.0.1-SNAPSHOT.jar"]
+COPY build/libs/my-app-0.0.3.jar my-app-0.0.3.jar
+ENTRYPOINT ["java", "-jar", "my-app-0.0.3.jar"]
